<resources>
    <string name="app_name">Salamtech - GP</string>
    <string name="salamtechlogo">SalamtechLOGO</string>

    <!--  homepage strings  -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="label_text_string">Home</string>
    <string name="label_text_ek1_string">Browse</string>
    <string name="label_text_ek2_string">Settings</string>
    <string name="supporting_text_string">Search anything…</string>
    <string name="dashboard_string">Dashboard</string>
    <string name="welcome__jone_string">Welcome, Jone</string>
    <string name="stats_string">Stats</string>
    <string name="bpm_string">BPM</string>
    <string name="_98_string">98</string>
    <string name="call_s_o_s_string">Call S.O.S</string>
    <string name="emergency__string">Emergency!</string>
    <string name="your_device_string">Your device</string>
    <string name="button_ek1_string">Setup</string>
    <string name="you_currently_have_no_device__please_setup_a_device__string">You currently have no device.Please setup a device.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="create_account">Create Account</string>
    <string name="_2_5">2/5</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="facebook_icon">Facebook_Icon</string>
    <string name="google_icon">google_icon</string>
    <string name="apple_icon">apple_icon</string>
    <string name="eye_svg_icon">eye_svg_icon</string>
    <string name="_1_5">1/5</string>
    <string name="next">Next</string>
    <string name="_3_5">3/5</string>
    <string name="login">Login</string>
    <string name="setup">Setup</string>
    <string name="_4_5">4/5</string>
    <string name="find_your_watch">Find your watch</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_salamtech">Welcome to Salamtech</string>
    <string name="start">Start</string>
    <string name="home_icon">home_icon</string>
    <string name="search_anything">Search anything...</string>
    <string name="menu_search">menu_search</string>
    <string name="heart_icon">heart_icon</string>
    <string name="info">Info</string>
    <string name="dismiss">Dismiss</string>
    <string name="pill_detail_text_1">Tablets and Caplets: Standard forms containing 500 mg of paracetamol per unit.</string>
    <string name="pill_detail_text_2">Instruction: Take 1–2 Panadol tablets (500–1000 mg) every 4–6 hours as needed, not exceeding 8 tablets (4000 mg) in 24 hours.</string>
    <string name="health_history_detail_text_1">Personalized Insights: Receive AI-powered recommendations tailored to your health data to stay proactive and informed.</string>
    <string name="health_history_detail_text_2">Great job staying healthy! Keep up the good work and remember, every small step adds to your well-being. Stay active and take care!</string>
    <string name="anomaly_text_1">Heart rate spiked to 150 bpm at 2:35 PM. Recommended Action: Rest immediately. If you feel unwell, contact a doctor.</string>
    <string name="register_an_account">Register an account</string>
</resources>