<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start_activity_3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outerCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background_bottom_sharp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:paddingTop="24dp">

            <!-- Back arrow -->
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/back_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp" />

            <!-- Title -->
            <TextView
                android:id="@+id/title0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:paddingBottom="24dp" />

            <!-- Step -->
            <TextView
                android:id="@+id/pageTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp" />

            <!-- Email Input -->
            <androidx.cardview.widget.CardView
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/title0"
                app:cardElevation="4dp"
                android:translationZ="2dp"
                app:cardCornerRadius="31dp"
                app:cardBackgroundColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#B0B0B0"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusTopStart="31dp"
                    app:boxCornerRadiusTopEnd="31dp"
                    app:boxCornerRadiusBottomStart="31dp"
                    app:boxCornerRadiusBottomEnd="31dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <!-- Password Input -->
            <androidx.cardview.widget.CardView
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:cardElevation="4dp"
                android:translationZ="2dp"
                app:cardCornerRadius="31dp"
                app:cardBackgroundColor="#FFFFFF">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="31dp"
                        app:boxCornerRadiusBottomStart="31dp"
                        app:boxCornerRadiusTopEnd="31dp"
                        app:boxCornerRadiusTopStart="31dp"
                        app:boxStrokeColor="#B0B0B0"
                        app:boxStrokeWidth="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/eye_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textColor="#000000"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/eye_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/eye_svg_icon"
                        android:contentDescription="@string/eye_svg_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/password_input_layout"
                        app:layout_constraintBottom_toBottomOf="@+id/password_input_layout"
                        android:layout_marginEnd="12dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <!-- Login Button -->
            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="@string/login"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />

            <!-- Existing Account Text -->
            <TextView
                android:id="@+id/haveAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_an_account"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/button_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <!-- Social Login Label -->
            <TextView
                android:id="@+id/social_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_with_70_opacity"
                android:text="@string/sign_in_using"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/haveAccountTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Social Icons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/social_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/google_icon"
                    android:contentDescription="@string/google_icon"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/apple_icon"
                    android:contentDescription="@string/apple_icon"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/facebook_icon"
                    android:contentDescription="@string/facebook_icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>